<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CashPaymentFragment">

    <TextView
        android:id="@+id/saleTotalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_total_label" />

    <TextView
        android:id="@+id/saleTotalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tenderedAmountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tendered_amount_label" />

    <EditText
        android:id="@+id/tenderedAmountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_button" />

    <TextView
        android:id="@+id/thankYouLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_label"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/changeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:freezesText="true"/>

    <Button
        android:id="@+id/paymentDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_done_button"
        android:visibility="invisible" />

</LinearLayout>